--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-image-carousel": "^2.0.18",
-    "react-image-gallery": "^1.0.7",
-    "react-images": "^1.1.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
