--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
